<resources>
    <string name="app_name">SecondApp</string>
    <string name="edad">Edad</string>
    <string name="calcular">calcular</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="resultado">Resultado</string>
    <string name="indicacion">Indicacion</string>
    <string name="volver">Volver</string>
    <string name="iterative_app_homitowen">Iterative App</string>
    <string name="categorias">Categorias</string>
    <string name="tareas">Tareas</string>
    <string name="new_task">New task</string>
    <string name="escribir">Escribir...</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="other">Other</string>
    <string name="add">Add</string>
    <string name="volumen">Volumen</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="modo_oscuro_descripcion">Alternar apariencia de la applicacion al modo oscuro</string>
</resources>