<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/lyNewTask"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/fourthColor"
    android:padding="10dp">
    <EditText
        android:id="@+id/etAddDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_view_size_main"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/escribir"
        />

    <RadioGroup
        android:id="@+id/rgCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/personal"
            android:textSize="@dimen/text_view_size"
            android:checked="true"
            android:textColor="@color/white"/>
        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/business"
            android:textSize="@dimen/text_view_size"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rnOther"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/other"
            android:textSize="@dimen/text_view_size"
            android:textColor="@color/white"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>



</LinearLayout>