<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.settingApp.SettingActivity"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/vector_volume"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volumen"
                android:textStyle="bold"
                android:textSize="@dimen/text_view_size"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/rsVolumen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:valueFrom="0"
                android:valueTo="100"
                android:stepSize="1"
                />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/vector_modo_oscuro"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modo_oscuro"
                android:textStyle="bold"
                android:textSize="@dimen/text_view_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="@string/modo_oscuro_descripcion"/>
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/smModoOscuro"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.01"/>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"/>



</LinearLayout>