<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.imcapp.ResultImcActivity"
    android:paddingHorizontal="20dp"
    android:paddingTop="50dp"
    android:paddingBottom="5dp"
    android:background="@color/purple"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/purple"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size"
                android:text="@string/resultado"/>
            <TextView
                android:id="@+id/tvResultadoCalculado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size_main"
                android:text="@string/resultado"
                android:textColor="@color/purple_light"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvResultado"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/purple"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size"
                android:text="@string/indicacion"/>
            <TextView
                android:id="@+id/tvResultadoIndicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_view_size_main"
                android:text="@string/resultado"
                android:textColor="@color/purple_light"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bVolver"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        android:text="@string/volver"
        />
</androidx.constraintlayout.widget.ConstraintLayout>